crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__xonsh_1.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2811
expression: "lex_source(r#\"\n!(command arg)\n$(command arg)\n![foo-and second]\n$[foo-and second] && $[foo-and three]\n\"#)"
---
## Tokens
```
[
    NonLogicalNewline 0..1,
    BangLParen 1..3,
    Name 3..10,
    Name 11..14,
    Rpar 14..15,
    Newline 15..16,
    DollarLParen 16..18,
    Name 18..25,
    Name 26..29,
    Rpar 29..30,
    Newline 30..31,
    BangLSqb 31..33,
    Name 33..36,
    Minus 36..37,
    And 37..40,
    Name 41..47,
    Rsqb 47..48,
    Newline 48..49,
    DollarLSqb 49..51,
    Name 51..54,
    Minus 54..55,
    And 55..58,
    Name 59..65,
    Rsqb 65..66,
    DoubleAmp 67..69,
    DollarLSqb 70..72,
    Name 72..75,
    Minus 75..76,
    And 76..79,
    Name 80..85,
    Rsqb 85..86,
    Newline 86..87,
]
```
