crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__xonsh_10.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2854
expression: "lex_source(r#\"p`.*`\"#)"
---
## Tokens
```
[
    String 0..5 (flags = PATH_STRING | BACKTICK_STRING),
    Newline 5..5,
]
```
