crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__xonsh_11.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2858
expression: "lex_source(r#\"pg`.*`\"#)"
---
## Tokens
```
[
    String 0..6 (flags = PATH_STRING | BACKTICK_STRING | GLOB_STRING),
    Newline 6..6,
]
```
