crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__xonsh_12.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2862
expression: "lex_source(r#\"`\\d*`\"#)"
---
## Tokens
```
[
    String 0..5 (flags = BACKTICK_STRING),
    Newline 5..5,
]
```
