crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__xonsh_13.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2866
expression: "lex_source(r#\"`.*#{1,2}`\"#)"
---
## Tokens
```
[
    String 0..10 (flags = BACKTICK_STRING),
    Newline 10..10,
]
```
