crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__xonsh_2.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2822
expression: "lex_source(r#\"print(r\"/foo\")\"#)"
---
## Tokens
```
[
    Name 0..5,
    Lpar 5..6,
    String 6..13 (flags = DOUBLE_QUOTES | RAW_STRING_LOWERCASE),
    Rpar 13..14,
    Newline 14..14,
]
```
