crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__xonsh_3.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2826
expression: "lex_source(r#\"print(pr\"/foo\")\"#)"
---
## Tokens
```
[
    Name 0..5,
    Lpar 5..6,
    String 6..14 (flags = DOUBLE_QUOTES | RAW_STRING_LOWERCASE | PATH_STRING),
    Rpar 14..15,
    Newline 15..15,
]
```
