crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__xonsh_5.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2834
expression: "lex_source(r#\"o>1\"#)"
---
## Tokens
```
[
    Name 0..1,
    Greater 1..2,
    Int 2..3,
    Newline 3..3,
]
```
