crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__xonsh_6.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2838
expression: "lex_source(r#\"2>1\"#)"
---
## Tokens
```
[
    Int 0..1,
    Greater 1..2,
    Int 2..3,
    Newline 3..3,
]
```
